<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_SITP_PolecenieZmianyTrybu" Id="{08b674d9-85b8-0708-0d44-bb35df458f84}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SITP_PolecenieZmianyTrybu :
(
	brak							:= 0,
	Produkcja						:= 1,
    Konserwacja						:= 2,
    Reczny							:= 3,
    Mycie							:= 4,
    Diagnostyka						:= 5
//    Uzytkownika2					:= 6,
//    Uzytkownika3					:= 7,
//    Uzytkownika4					:= 8,
//    Uzytkownika5					:= 9
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>