<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SITP_Element" Id="{f09d62fa-2c6c-0ecb-3a3d-ccee57e10643}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		24.02.2025		TC 4026.13		wer. 0.0.0.1
	Obsługa jednego stanu
*)
FUNCTION_BLOCK FB_SITP_Element EXTENDS B_Baza.FB_Podstawa IMPLEMENTS ITF_SITP_Element
VAR
	stNazwa						: B_Baza.ST_Etykieta;
	bAktywny					: BOOL;				//informacja czy dany element jest aktywny 
	bWlaczony					: BOOL;				//informacje czy dany element jest włączony
	refstDaneSITP				: REFERENCE TO ST_SITP_DaneElementu;
END_VAR
VAR PERSISTENT
	ltCzas						: LTIME;				//czas pracy w danym stanie - trybie
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AktualizujCzas" Id="{3a5465d3-ca54-049b-2d1f-8b1cdc90355f}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		25.02.2025		TC 4026.13		wer. 0.0.0.1
	Aktualizuje czas pracy w stanie
*)
METHOD PUBLIC AktualizujCzas
VAR_INPUT
	tInterwal			: time;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.ltCzas		:= THIS^.ltCzas + TO_LTIME (tInterwal);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="BrakZgodyNaZmieneStanu" Id="{a4685485-97c1-01a3-00d8-6118e5e73cad}">
      <Declaration><![CDATA[METHOD PROTECTED BrakZgodyNaZmieneStanu : BOOL
VAR_INPUT
	iNumerBledu								: int;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstDaneSITP.bAktywnyBlad				:= TRUE;
THIS^.refstDaneSITP.iNumerBledu					:= iNumerBledu;
THIS^.refstDaneSITP.ePolecenieZmianyStanu		:= E_SITP_PolecenieZmianyStanu.brak;
THIS^.refstDaneSITP.refbWyjdzZestanuAktywnego	:= FALSE;
BrakZgodyNaZmieneStanu							:= FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="BrakZgodyNaZmieneTrybu" Id="{faeb3922-ebaa-01cd-25a0-7eaa0fc7f4ff}">
      <Declaration><![CDATA[METHOD PROTECTED BrakZgodyNaZmieneTrybu : BOOL
VAR_INPUT
	iNumerBledu								: int;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstDaneSITP.bAktywnyBlad			:= TRUE;
THIS^.refstDaneSITP.iNumerBledu				:= iNumerBledu;
THIS^.refstDaneSITP.ePolecenieZmianyTrybu	:= E_SITP_PolecenieZmianyTrybu.brak;

BrakZgodyNaZmieneTrybu						:= FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="PowiazDane" Id="{6cf1b9ee-1777-05bf-0334-b611cc07fdad}">
      <Declaration><![CDATA[METHOD PUBLIC PowiazDane
VAR_INPUT
	stDaneSITP					: REFERENCE TO ST_SITP_DaneElementu;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstDaneSITP				REF= stDaneSITP;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ustawAktywny" Id="{ff4357ae-6bca-0062-2e95-c132f7518924}">
      <Declaration><![CDATA[METHOD PUBLIC ustawAktywny
VAR_INPUT
	bIN		: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bAktywny		:= bIN;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="UstawNazwe" Id="{f1cd3761-b4be-0af5-03f9-537259e97fe9}">
      <Declaration><![CDATA[METHOD PUBLIC UstawNazwe
VAR_INPUT
	stNazwa					: B_Baza.ST_Etykieta;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.stNazwa				:= stNazwa;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ustawWlaczony" Id="{b428fd13-129c-0249-3ffa-8b6d1d9a9d32}">
      <Declaration><![CDATA[METHOD PUBLIC ustawWlaczony
VAR_INPUT
	bIN		: bool;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bWlaczony		:= bIN;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="WywolajAkcjePBDlaStanu" Id="{33f5407a-ad0c-01b1-1957-edff3a5b2e9d}">
      <Declaration><![CDATA[METHOD PUBLIC WywolajAkcjePBDlaStanu : BOOL
VAR_INPUT
	iNumerPB				: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZerujCzas" Id="{6b6e4088-eb40-082d-0f1a-5998e68b6b28}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		25.02.2025		TC 4026.13		wer. 0.0.0.1
	Zeruje wartość czasu
*)
METHOD PUBLIC ZerujCzas
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.ltCzas			:= LTIME#0MS;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZgodaNaZmianeStanu" Id="{1b25377c-6a95-0e25-0a31-0fc7c6aabeba}">
      <Declaration><![CDATA[METHOD PROTECTED ZgodaNaZmianeStanu : BOOL
VAR_INPUT
	eNowyStan		: B_Baza.E_StanyPracy;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstDaneSITP.bAktywnyBlad				:= FALSE;
THIS^.refstDaneSITP.iNumerBledu					:= 0;	//Stan do którego chcemy przejść jest wylaczony
THIS^.refstDaneSITP.eNowyStan					:= eNowyStan;
THIS^.refstDaneSITP.ePolecenieZmianyStanu		:= E_SITP_PolecenieZmianyStanu.brak;
THIS^.refstDaneSITP.refbWyjdzZestanuAktywnego	:= FALSE;
ZgodaNaZmianeStanu								:= TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZgodaNaZmianeTrybu" Id="{d0c15963-555b-094a-2829-c08c5aca6368}">
      <Declaration><![CDATA[METHOD PROTECTED ZgodaNaZmianeTrybu : BOOL
VAR_INPUT
	eNowyTryb		: B_Baza.E_TrybyPracy;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstDaneSITP.bAktywnyBlad			:= FALSE;
THIS^.refstDaneSITP.iNumerBledu				:= 0;	//Stan do którego chcemy przejść jest wylaczony
THIS^.refstDaneSITP.eNowyTryb				:= eNowyTryb;
THIS^.refstDaneSITP.ePolecenieZmianyTrybu	:= E_SITP_PolecenieZmianyTrybu.brak;

ZgodaNaZmianeTrybu							:= TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="zwrocAktywny" Id="{55b068a1-95b1-0a9f-1b77-175c83cd8df8}">
      <Declaration><![CDATA[METHOD zwrocAktywny : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[zwrocAktywny		:= THIS^.bAktywny;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="zwrocCzas" Id="{fd84d376-380d-0a8e-25f8-fb2cb25c230c}">
      <Declaration><![CDATA[METHOD PUBLIC zwrocCzas : STRING
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[zwrocCzas 		:= LTIME_TO_STRING (THIS^.ltCzas);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZwrocCzyMoznaWyjscZeStanu" Id="{93e8b184-bcc4-07f0-2247-d1d3b60dfc72}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		18.06.2025		TC 4024.66
	Zwraca true jak wyjście ze stanu jest możliwe
*)
METHOD PUBLIC ZwrocCzyMoznaWyjscZeStanu : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//warunki wyjść dla każdego ze stanów osobnym FB]]></ST>
      </Implementation>
    </Method>
    <Method Name="zwrocLCzas" Id="{b818329e-c311-0c7f-2781-c9421caa7f0e}">
      <Declaration><![CDATA[METHOD PUBLIC zwrocLCzas : LTIME
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[zwrocLCzas					:= this^.ltCzas;]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZwrocNazwe" Id="{eff0b4d8-7783-0676-07d7-35e0a51661db}">
      <Declaration><![CDATA[METHOD PUBLIC ZwrocNazwe : WSTRING
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[ZwrocNazwe 		:= THIS^.ZwrocTekstZ (stEtykieta := THIS^.stNazwa);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="zwrocWlaczony" Id="{6f59eaca-c13b-02ba-1f65-8cf36c847f10}">
      <Declaration><![CDATA[METHOD PUBLIC zwrocWlaczony : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[zwrocWlaczony		:= THIS^.bWlaczony;
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>